# FogNet

./: .gitignore  =3.12  LICENSE  README.md  pyproject.toml  reqs_reproducibility.txt  train.py
config/: config.yaml
fognet/: __init__.py  metrics.py  utils.py
fognet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fognet/data/: __init__.py  data.py
fognet/models/: __init__.py  fognet.py  unet.py
